# redteam-composer

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/redteam_composer/: __init__.py  cli.py  composer.py  strategy_loader.py  strategy_models.py  taxonomy_loader.py
src/redteam_composer/taxonomy/strategies/: combinations.yaml
src/redteam_composer/taxonomy/strategies/shapes/: artifact.yaml  multi_turn.yaml  single_prompt.yaml  system_jailbreak.yaml
src/redteam_composer/taxonomy/strategies/tactics/: agentic.yaml  capability_inversion.yaml  cognitive_load.yaml  compositional.yaml  control_plane.yaml  defense_evasion.yaml  encoding.yaml  framing.yaml  icl_exploitation.yaml  meta_rules.yaml  multiturn.yaml  narrative.yaml  output.yaml  persona.yaml  persuasion.yaml  protocol.yaml  refusal.yaml
src/redteam_composer/taxonomy/techniques/: agentic.yaml  capability_inversion.yaml  cognitive_load.yaml  compositional.yaml  control_plane.yaml  defense_evasion.yaml  encoding.yaml  framing.yaml  icl_exploitation.yaml  meta_rules.yaml  multiturn.yaml  narrative.yaml  output.yaml  persona.yaml  persuasion.yaml  protocol.yaml  refusal.yaml
tests/: conftest.py  test_cli.py  test_composer.py  test_strategy_loader.py  test_taxonomy_loader.py
